--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Proyecto InfoSoc</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Inicio</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,10 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="reduccion.html">Reducción de desechos</a></li>
+											<li><a href="alimentacion.html">Apropiada alimentación</a></li>
+											<!-- <li><a href="#">Sign Up</a></li>
+											<li><a href="#">Log In</a></li> -->
 										</ul>
 									</div>
 								</li>
@@ -41,19 +41,23 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
+							<!-- <h2>Spectral</h2> -->
+							<img id="index_logo" src="images/logo_cuadrado.png" alt="Logo">
+							<p>
+								Aprende a disminuir el <br>
+								desperdicio de alimentos <br>
+								junto a una buena alimentación
+							</p>
+							<!-- <ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+								<li><a href="#" class="button primary">Activate</a></li>
+							</ul> -->
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#two" class="more scrolly">Ver más</a>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+					<!-- <section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Arcu aliquet vel lobortis ata nisl<br />
@@ -67,35 +71,54 @@
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image">
+								<img src="images/info1.jpg" alt="" />
+							</div>
+							<div class="content">
+								<h2>Desperdicio de alimentos</h2>
+								<p>
+									El denominado "Índice de desperdicios de alimentos 2021" expone que el 
+									17% de la producción total de alimentos en el mundo fue a parar a la 
+									basura.
+								</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image">
+								<img id="info2" src="images/info2.png" alt="" />
+							</div>
+							<div class="content">
+								<h2>¿Creías que los desperdicios son mayoritariamente culpa de las grandes empresas?</h2>
+								<p>
+									Según los resultados del estudio liderado por la ONU, la mayor parte del 
+									desperdicio de alimentos —equivalente a un 61%—, proviene de los 
+									hogares. Es decir, de las casas de cada uno de nosotros. De esa manzana 
+									que quizás compraste de más y decidiste desecharla. O de ese plátano 
+									que, tras llevar días en tu cocina, se puso negro.
+								</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image">
+								<img src="images/info3.jpg" alt="" />
+							</div>
+							<div class="content">
+								<h2>Desperdiciar comida contamina el medio ambiente</h2>
+								<p>De acuerdo con la ONU, se estima que entre el 8% y el 10% de las 
+									emisiones globales de gases de efecto invernadero están asociadas con 
+									comida que no se consume.</p>
 							</div>
 						</section>
+						
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -129,7 +152,7 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
