--- a/alimentacion.html
+++ b/alimentacion.html
@@ -42,7 +42,6 @@
 			<article id="main">
 				<header>
 					<h2>Alimentación</h2>
-					<p>(Breve descripción de lo que se hablará) Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 				</header>
 				<section class="wrapper style5">
 					<div class="inner">
@@ -50,50 +49,136 @@
 							<h3>Cantidad de frutas y verduras para cada miembro de la familia</h3>
 							<p>
 								<!-- Alimentacion Niños -->
+								En una investigación publicada el 1 de Marzo de 2021 por la revista <i>Circulation</i>
+								se reunió información de salud y dieta de docenas de estudios de todo el mundo, en el
+								cual se incluyeron cerca de dos millones de personas a las que se les dio seguimiento
+								hasta por 30 años.
+								<br><br>
+								Comparando las personas que dijieron que comían solo dos porciones de frutas o verduras
+								al día, las personas que comían cinco porciones al día tenían:
+								<ul>
+									<li>Un 13% menos de riesgo de muerte por cualquier causa</li>
+									<li>Un 12% menos de riesgo de muerte por enfermedad cardíaca o accidente cerebrovascular</li>
+									<li>Un 10% menos de riesgo de muerte por cáncer</li>
+									<li>Un 35% menos de riesgo de muerte por enfermedad respiratoria, como la enfermedad pulmonar obstructiva crónica</li>
+
+								</ul>
 								<span class="image left">
 									<img src="images/alimentacion1.jpg" alt="" />
 								</span>
-								Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. 
-								Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate 
-								ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. 
-								Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, 
-								fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis 
-								iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante 
-								ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies 
-								odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. 
-								Etiam ut gravida sapien. Morbi mattis mi consectetur tortor elementum, varius pellentesque velit 
-								convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis 
-								vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada 
-								justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, 
-								fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis 
-								iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante 
-								ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies 
-								odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. 
-								Etiam ut gravida sapien.
-							</p>
-							<p>
-								<!-- Alimentacion Adultos -->
+								"Las frutas y verduras son fuentes importantes de varios nutrientes que están estrechamente relacionados
+								con la buena salud, en particular la salud del corazón y los vasos sanguíneos: potasio, magnesio, fibra
+								 y polifenoles (compuestos vegetales antioxidantes)", explica el Dr. Daniel Wang, autor principal
+								del estudio y miembro de la Facultad de Medicina de Harvard y del Hospital Brigham and Women's.
+								<br><br>
+								La combinación más efectiva de frutas y verduras entre los participantes del estudio fue dos porciones
+								de frutas más tres porciones de verduras por día, para un total de cinco porciones diarias.
+								<br><br>
 								<span class="image right">
 									<img src="images/alimentacion2.jpg" alt="" />
 								</span>
-								Vestibulum ultrices risus 
-								velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum 
-								porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus 
-								ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui 
-								eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. 
-								Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam 
-								vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper 
-								ante tincidunt. Mauris felis nec felis elementum varius. Nam sapien ante, varius in pulvinar 
-								vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. 
-								Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, 
-								volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat. 
-								Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget 
-								condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet 
-								eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus 
-								justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis 
-								maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin 
-								mauris dui.
+								Los mayores beneficios para la salud provinieron del consumo de vegetales de hojas verdes (col
+								rizada, espinacas) y frutas y vegetales ricos en vitamina C y betacaroteno (cítricos, bayas, zanahorias).
+								 "Estas son fuentes primarias de antioxidantes que pueden desempeñar un papel en la prevención del cáncer",
+								 dice el Dr. Wang.
+								<br><br>
+								Hay que comprender que estamos hablando de cuánto se come en promedio. Si durante un día en particular no tienes
+								 frutas y verduras, está bien: no te desmayarás. Puede agregar un poco más de lo habitual en otros días
+								 para aumentar su promedio de la semana.
 							</p>
+							<p>
+								<!-- Alimentacion Adultos -->
+								
+								
+							</p>
+						</section>
+
+						<section>
+							<h3>Tabla con porciones de algunas frutas y verduras</h3>
+							<style type="text/css">
+								.tg  {border-collapse:collapse;border-spacing:0;}
+								.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+								  overflow:hidden;padding:10px 5px;word-break:normal;}
+								.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+								  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+								.tg .tg-7btt{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
+								.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+							</style>
+							<table class="tg">
+								<thead>
+								  <tr>
+									<th class="tg-7btt">Frutas</th>
+									<th class="tg-7btt">Verduras</th>
+								  </tr>
+								</thead>
+								<tbody>
+								  <tr>
+									<td class="tg-0pky">Manzana (1 fruta)</td>
+									<td class="tg-0pky">Brócoli (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Damasco (1 fresco, 1/2 taza enlatados)</td>
+									<td class="tg-0pky">Coles de bruselas (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Palta (1/2 fruta o 1/2 taza)</td>
+									<td class="tg-0pky">Repollo (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Melón (1/4 de melón)</td>
+									<td class="tg-0pky">Zanahorias (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Naranja (1)</td>
+									<td class="tg-0pky">Coliflor (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Duraznos o ciruelas (1 fresco o 1/2 taza en lata)</td>
+									<td class="tg-0pky">Apio (2-3 palitos)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Frutilla (1/2 taza frescas, congeladas o enlatadas)</td>
+									<td class="tg-0pky">Maíz (1 mazorca o 1/2 taza congelada o enlatada)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Pera (1 fruta)</td>
+									<td class="tg-0pky">Berenjena (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Pasas (28 gramos)</td>
+									<td class="tg-0pky">Col rizada, hojas de mostaza o acelgas (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Plátano (1 fruta)</td>
+									<td class="tg-0pky">Lechuga (1 taza iceberg, hoja, romana)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Arándanos (1/2 taza frescos, congelados o enlatados)</td>
+									<td class="tg-0pky">Verduras mixtas o salteadas (1/2 taza)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Pomelo (1/2 fruta)</td>
+									<td class="tg-0pky">Cebolla (1 rebanada)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Uvas (1/2 taza)</td>
+									<td class="tg-0pky">Pimientos (3 rebanadas verdes, amarillas o rojas)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky">Duraznos o ciruelas (1 fresco o 1/2 taza en lata)</td>
+									<td class="tg-0pky">Salsa, picante or taco sauce (1/4 cup)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky"></td>
+									<td class="tg-0pky">Tomates (2 rebanadas)</td>
+								  </tr>
+								  <tr>
+									<td class="tg-0pky"></td>
+									<td class="tg-0pky">Espinaca (1/2 taza cocida o 1 taza cruda)</td>
+								  </tr>
+								</tbody>
+								</table>
+
 						</section>
 						<section>
 							<h3>Calculadora de alimento</h3>
@@ -141,8 +226,8 @@
 				let nKids = parseInt($("#kids").val());
 				let nAdults = parseInt($("#adults").val());
 
-				if((isNaN(nKids) || nKids == 0) && (isNaN(nAdults) || nAdults == 0)){
-					alert("Ingrese al menos 1 dato.");
+				if((isNaN(nKids) || nKids == 0 || nKids < 0) && (isNaN(nAdults) || nAdults == 0 || nAdults < 0)){
+					alert("Ingrese al menos 1 dato correcto.");
 					return;
 				}
 
@@ -152,26 +237,34 @@
 				if(isNaN(nAdults)){
 					nAdults = 0;
 				}
+				if(nKids < 0){
+					$("#kids").val(0);
+					nKids = 0;
+				}
+				if(nAdults < 0){
+					$("#adults").val(0);
+					nAdults = 0;
+				}
 
 				//console.log("Niños: " + nKids + "\nAdultos: " + nAdults);
 
 				// TODO: calculo de:  (frutas y verduras) x (cantidad correspondiente)
 
 				// Change this data
-				// is in [Cup]
-				let fruitsPerKid = 2;
-				let veggiesPerKid = 3;
+				let fruitsPerKid = 3; // [Cup]
+				let veggiesPerKid = 2; // [Cup]
 
-				let fruitsPerAdult = 2;
-				let veggiesPerAdult = 3;
+				let fruitsPerAdult = 3; // [Cup]
+				let veggiesPerAdult = 2; // [Cup]
 
 				let totalFruits = nKids * fruitsPerKid + nAdults * fruitsPerAdult;
 				let totalVeggies = nKids * veggiesPerKid + nAdults * veggiesPerAdult;
 
+
 				$("#calculatorResult").text(""+
 				"Con " + nKids + " niños y " + nAdults + " adultos " +
-				"se debiese consumir " + totalFruits + " copas (?) de frutas y " +
-				totalVeggies + " copas (?) de vegetales"
+				"se debiese consumir " + totalFruits + " porciones de frutas y " +
+				totalVeggies + " porciones de vegetales al día."
 				+"");
 
 			});
